fixed disappearing scrollbar by overriding bootstrap class 'modal-open' not to hide scrollbar. Also made target port configurable on e2e-tests. Closes #71

--- a/web/app/styles/structure.css
+++ b/web/app/styles/structure.css
@@ -73,11 +73,11 @@ td.info-col {
     padding: 2px 0;
     margin-bottom: -1px;
     white-space: nowrap;
-    overflow: hidden;
+    overflow: auto;
 }
 
 #fourOhThree {
-    position:fixed;
+    position:absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -104,6 +104,7 @@ td.info-col {
     height: 40px;
 }
 .container .credit { margin: 10px 0; }
+.modal-open { overflow-y: auto; }
 
 p.noresults {
     background-color: #333;
